test/Programs/InvalidTests/linArgNotConsumed/linArgNotConsumed.fst
f : !Int -> Char
f should_be_consumed = 'a'

main : Int
main = 5
